objects/SVMXC__Timesheet_Entry__c.object
<CustomObject>
    <fields>
        <fullName>DurationInHour__c</fullName>
        <description>Duration in hours.</description>
        <formula>(SVMXC__End_Time__c - SVMXC__Start_Time__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration in hours.</inlineHelpText>
        <label>Duration (h)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Holiday__c</fullName>
        <formula>SVMXC__Timesheet_Day__r.SVMXC__IsHoliday__c</formula>
        <label>Is Holiday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WO_Description__c</fullName>
        <formula>if(NOT(ISBLANK(SVMXC__Work_Detail__c)),

TEXT(SVMXC__Activity__c) &amp;
&apos; - &apos; &amp;	
TEXT(SVMXC__SM_Type__c) &amp;
&apos; - &apos; &amp;
SVMXC__Work_Detail__r.SVMXC__Service_Order__r.SVMXC__Site__r.Name + &quot; &quot; + &apos;(&apos; &amp; SVMXC__Work_Detail__r.SVMXC__Service_Order__r.SVMXC__Site__r.SVMXC__City__c &amp; &apos;)&apos;, 
			
TEXT(SVMXC__Activity__c)&amp; 
&apos; - &apos; &amp;	
TEXT(SVMXC__SM_Type__c))
/*SVMXC__Work_Detail__r.SVMXC__Service_Order__r.SVMXC__Site__r.SVMXC__City__c &amp;
&apos; - &apos; &amp;
TEXT(SVMXC__Activity__c) &amp;
&apos; - &apos; &amp;
TEXT(SVMXC__SM_Type__c) &amp;
&apos; - &apos; &amp;
SVMXC__Work_Detail__r.SVMXC__Service_Order__r.SVMXC__Site__r.Name
&amp; &apos;-&apos; 
&amp; SVMXC__Work_Detail__r.SVMXC__Service_Order__r.SVMXC__Company__r.Name*/</formula>
        <label>WO Description</label>
        <type>Text</type>
    </fields>
</CustomObject>